完成主要框架结构设计 细节功能还未实现
模型的 编辑 删除 界面等未完成

--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -15,7 +15,8 @@ body{
 }
 
 .message{
-    color: #009933;
+    text-align: left;
+    color: #009966;
     font-size: 20px;
 }
 
@@ -61,6 +62,9 @@ body{
     border: 2px solid #EEE;
     box-shadow: 0 0 5px aqua;
     
+}
+.index{
+    text-align: left;
 }
 
 /*登陆*/
