基本完成所有功能 部分页面需要修改  单位没有
单位

--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -63,9 +63,33 @@ body{
     box-shadow: 0 0 5px aqua;
     
 }
+
+.frame_account{
+    text-align: left;
+
+}
+ .frame_shop {
+    text-align: left;
+
+}
+ .frame_addshop {
+    text-align: left;
+
+}
+ .frame_goods{
+    text-align: left;
+
+}
+
 .index{
     text-align: left;
+    color: green;
 }
+
+.index a{
+    color: green;
+}
+
 
 /*登陆*/
 .login_box{
